--- a/Examsystem/Views/Admin/GetdetailsExams.cshtml
+++ b/Examsystem/Views/Admin/GetdetailsExams.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "GetdetailsExams";
     
 }
-
-<h2>GetdetailsExams</h2>
+<br/><br /><br />
+<h2>Exam schedule </h2>
 
 <p>
     @Html.ActionLink("Create New", "Addexam")
