--- a/Examsystem/Views/Admin/Edit.cshtml
+++ b/Examsystem/Views/Admin/Edit.cshtml
@@ -2,21 +2,23 @@
 
 @{
     ViewBag.Title = "Edit";
-   
+
 }
+<br />
+<br />
+<br />
+<h2>Edit exam schedule </h2>
 
-<h2>Edit</h2>
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>exam</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-     
-       
+
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.exam_description, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -27,10 +29,12 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.category_id, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.category_id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.category_id, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label class="control-label col-md-2"> Select Category</label>
+
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.category_id, ViewBag.Catlist as SelectList, "--select category--", new { @class = "form-control" })
+                </div>
             </div>
         </div>
 
