--- a/Examsystem/Views/Admin/Results.cshtml
+++ b/Examsystem/Views/Admin/Results.cshtml
@@ -1,43 +1,65 @@
-﻿
-@model Examsystem.Models.Report
+﻿@model IEnumerable<Examsystem.Models.Report>
 
 @{
-    ViewData["Title"] = "Display";
+    ViewBag.Title = "Results";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<br/><br/><br/>
+<h2>Results</h2>
+@if (ViewBag.not != null)
+{
+    <h2><center>@ViewBag.not</center></h2>
+    <div align="center">
+        <a href="@Url.Action("Getdetailsstudents", new {  } )" class="btn btn-primary">ok</a>
+    </div>
 
-<br /><br /><br />
-<div>
-    <h4>Report  </h4>
-    <table>
+}
+@if (ViewBag.not == null)
+{
+    <table class="table">
         <tr>
-        </tr>
-        <tr></tr>
-
-
-        <tr>
-            <td>Report id: </td>
-            <td>@ViewBag.reportid</td>
-        </tr>
-        <tr>
-            <td>Exam id: </td>
-            <td>@ViewBag.eid</td>
-        </tr>
-        <tr>
-            <td>user id </td>
-            <td> @ViewBag.uid</td>
-        </tr>
-        <tr>
-            <td>score </td>
-            <td> @ViewBag.score</td>
+            <th>
+                @Html.DisplayNameFor(model => model.result_id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.result_status)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.result_score)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.user_id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.exam_id)
+            </th>
+            <th></th>
         </tr>
 
-        <tr>
-            <td> result status </td>
-            <td> @ViewBag.status</td>
-        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.result_id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.result_status)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.result_score)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.user_id)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.exam_id)
+                </td>
+
+            </tr>
+        }
 
     </table>
-</div>
-<div>
-    <a href="@Url.Action("Getdetailsstudents", new {  })" class="btn btn-success">back to list</a>
-</div>
+    <div align="center">
+        <a href="@Url.Action("Getdetailsstudents", new {  } )" class="btn btn-primary">ok</a>
+    </div>
+}
