--- a/Examsystem/Views/User/examques.cshtml
+++ b/Examsystem/Views/User/examques.cshtml
@@ -73,7 +73,7 @@
             {
                 alert('your test is timed out');
                 clearInterval(_tick);
-                location.href = "/User/Logout";
+                location.href = "/User/examques";
             }
         }, 1000);
 
