--- a/Examsystem/Views/User/showexam.cshtml
+++ b/Examsystem/Views/User/showexam.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "showexam";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<div align="center">  <a href="@Url.Action("Results", new {  })" class="btn btn-success">view report </a></div>
 <h2>showexam</h2>
 <table class="table">
     <tr>
